Revert: Replace System.out.println with logpoint across project (text files)
This reverts commit a2489acfa0816a6866aae96f0d62e184c7a68862 which replaced System.out.println with logpoint.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>